--- a/billusage/pom.xml
+++ b/billusage/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>io.spring</groupId>
 	<artifactId>billusage</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<name>Bill Usage</name>
 	<description>Demo project for importing information from S3</description>
 
