Cleanup based on design review
Updated billusage to billsetuptask

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<modules>
 		<module>billrun</module>
-		<module>billusage</module>
+		<module>billsetuptask</module>
 	</modules>
 
 	<dependencyManagement>
