--- a/billrun/pom.xml
+++ b/billrun/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.2.0.BUILD-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.spring</groupId>
-	<artifactId>bill-run</artifactId>
+	<artifactId>billrun</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<name>Bill Run</name>
 	<description>Bill processing app using Spring Batch</description>
