--- a/billsetuptask/pom.xml
+++ b/billsetuptask/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.2.0.BUILD-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.spring</groupId>
-	<artifactId>billusage</artifactId>
+	<artifactId>billsetuptask</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
-	<name>Bill Usage</name>
-	<description>Demo project for importing information from S3</description>
+	<name>Bill Setup Task</name>
+	<description>Spring Cloud Task to create BILL_STATEMENTS table</description>
 
 	<properties>
 		<java.version>1.8</java.version>
