--- a/billrun/pom.xml
+++ b/billrun/pom.xml
@@ -4,20 +4,19 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.BUILD-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>spring-cloud-task-edu-samples</artifactId>
+		<groupId>io.spring</groupId>
+		<version>1.0.0.BUILD-SNAPSHOT</version>
 	</parent>
-	<groupId>io.spring</groupId>
+
 	<artifactId>billrun</artifactId>
-	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<name>Bill Run</name>
 	<description>Bill processing app using Spring Batch</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+		<docker.org>springcloudtask</docker.org>
 	</properties>
 
 	<dependencies>
@@ -58,26 +57,5 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
